--- a/_posts/2017-11-30-TE1.markdown
+++ b/_posts/2017-11-30-TE1.markdown
@@ -3,9 +3,16 @@ layout: post
 title: "Gap Classification of a 3-Legged Unsignalized Intersection"
 date: 2017-11-30
 author: with Kumar Priyanshu
-meta: Course Project for CE310&#58; Transportation Engineering I, Autumn
+meta: Course Project for CE 310&#58; Transportation Engineering I, Autumn
 comments: false
 ---
 
 <a href="/docs/te1.pdf" >[Report]</a>
 <a href="https://github.com/sumanvid97/TE1_Project" >[Code]</a>
+
+![](/docs/gaps.png)
+
+This project is an implementation of the paper [Classification of Gaps at Uncontrolled Intersections and Midblock Crossings Using Support Vector Machines].
+Gap classification and acceptance predictions provide very important inputs for performance evaluation and safety analysis of 3-legged uncontrolled intersections at road networks. Reliable techniques can be used in advanced safety warning systems for vehicles and pedestrians waiting to cross major stream vehicles. The focus of this project was on the application of SVM, binary logit model (BLM) and ANN in understanding and classifying gaps at these facilities and comparing the results amongst these techniques to find the one with better skill scores.
+
+[Classification of Gaps at Uncontrolled Intersections and Midblock Crossings Using Support Vector Machines]: https://trrjournalonline.trb.org/doi/abs/10.3141/2515-04
