--- a/_posts/2018-04-30-IML.markdown
+++ b/_posts/2018-04-30-IML.markdown
@@ -10,6 +10,9 @@ comments: false
 <a href="https://medium.com/@videshsuman/using-reinforcement-learning-techniques-to-build-an-ai-bot-for-the-game-flappy-bird-30e0fd22f990" >[Blog]</a>
 <a href="https://github.com/sumanvid97/FlappyBird-AI" >[Code]</a>
 
+
 ![](/docs/flappy.gif)
 
-The goal for this project is to explore the simple Q-learning technique and Deep Q-Network (DQN) to build a learned agent for the game that can play on it’s own for as long time as possible. Also, faster convergence is ensured for Q-learning by implementing 𝜀-greedy policy & experience replay strategy
+The goal for this project was to explore the simple Q-learning technique and [Deep Q-Network] (DQN) to train an environment agnostic agent for the game, that can play on it’s own, achieving super-human scores. Also, faster convergence was ensured by implementing 𝜀-greedy & experience replay strategies.
+
+[Deep Q-Network]: https://www.cs.toronto.edu/~vmnih/docs/dqn.pdf
